--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -16,7 +16,7 @@ QMAKE = $(QTDIR)/bin/qmake
 
 # we use config.pri as a dependent to trigger rebuild of things when configure changes
 CONFIG_PRI = @abs_srcdir@/config.pri
-PDP_SYS_DIR = ${datadir}/pdp++
+EMERGENT_SYS_DIR = ${datadir}/pdp++
 
 all: qmake build
 
@@ -85,10 +85,10 @@ install:
 	@echo " "
 	@echo "** Doing ($@) in all plugin directories**"
 	@echo " "
-	$(MKDIR) $(PDP_SYS_DIR)/lib
-	$(CP) -Ru ../lib/plugins  $(PDP_SYS_DIR)/lib
-	$(MKDIR) $(PDP_SYS_DIR)/plugins
-	$(CP) -u config.pri shared_pre.pri shared.pri Makefile  $(PDP_SYS_DIR)/plugins
+	$(MKDIR) $(EMERGENT_SYS_DIR)/lib
+	$(CP) -Ru ../lib/plugins  $(EMERGENT_SYS_DIR)/lib
+	$(MKDIR) $(EMERGENT_SYS_DIR)/plugins
+	$(CP) -u config.pri shared_pre.pri shared.pri Makefile  $(EMERGENT_SYS_DIR)/plugins
 	@echo " "
 	@echo "** Make $@ successfully completed! **"
 	@echo " "
