Fixes for adding the plugins/Makefile, BugID: 54

--- a/configure.ac
+++ b/configure.ac
@@ -362,7 +362,7 @@ AC_CONFIG_FILES([Makefile
 		prog_lib/Makefile
 		test/Makefile
 		plugins/config.pri
-		plugins/Makefile
+		plugins/Makefile.plugin
 		css_lib/Makefile
 		demo/bp/Makefile
 		demo/cs/Makefile
