--- a/src/emergent/bin/Makefile.am
+++ b/src/emergent/bin/Makefile.am
@@ -7,14 +7,14 @@ DEFS=
 srcdir = @srcdir@
 VPATH = @srcdir@
 
-# emergent++
-bin_PROGRAMS = emergent@PDP_SUFFIX@
-emergent@PDP_SUFFIX@_SOURCES = main.cpp
+# emergent
+bin_PROGRAMS = emergent@EMERGENT_SUFFIX@
+emergent@EMERGENT_SUFFIX@_SOURCES = main.cpp
 
-emergent@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/emergent/lib/libemergent@PDP_SUFFIX@-@PACKAGE_VERSION@.la \
-	@abs_top_builddir@/src/temt/lib/libtemt@PDP_SUFFIX@-@PACKAGE_VERSION@.la
+emergent@EMERGENT_SUFFIX@_LDADD =\
+	@abs_top_builddir@/src/emergent/lib/libemergent@EMERGENT_SUFFIX@-@PACKAGE_VERSION@.la \
+	@abs_top_builddir@/src/temt/lib/libtemt@EMERGENT_SUFFIX@-@PACKAGE_VERSION@.la
 
-emergent@PDP_SUFFIX@_CPPFLAGS = @PDP_INCLUDES@
-emergent@PDP_SUFFIX@_CXXFLAGS = @OPT_LEVEL@
+emergent@EMERGENT_SUFFIX@_CPPFLAGS = @EMERGENT_INCLUDES@
+emergent@EMERGENT_SUFFIX@_CXXFLAGS = @OPT_LEVEL@
 
