--- a/src/emergent/bp/Makefile.am
+++ b/src/emergent/bp/Makefile.am
@@ -28,25 +28,25 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
-	libbp_EmergentToolkit@PDP_SUFFIX@.la \
-	libbp@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+	libbp_EmergentToolkit@EMERGENT_SUFFIX@.la \
+	libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
+libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @EMERGENT_INCLUDES@
+libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libbp_EmergentToolkit@PDP_SUFFIX@.la
+libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libbp_EmergentToolkit@EMERGENT_SUFFIX@.la
 
-libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libbp_EmergentToolkit@PDP_SUFFIX@.la
+libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libbp_EmergentToolkit@EMERGENT_SUFFIX@.la
 
-libbp_EmergentToolkit@PDP_SUFFIX@_la_SOURCES =\
+libbp_EmergentToolkit@EMERGENT_SUFFIX@_la_SOURCES =\
 	bp_TA.cpp \
 	bp_TA_type.h \
 	bp_TA_inst.h
 
-libbp_EmergentToolkit@PDP_SUFFIX@_la_CPPFLAGS = $(libbp@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
+libbp_EmergentToolkit@EMERGENT_SUFFIX@_la_CPPFLAGS = $(libbp@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 
-libbp_EmergentToolkit@PDP_SUFFIX@_la_CXXFLAGS = -O0
+libbp_EmergentToolkit@EMERGENT_SUFFIX@_la_CXXFLAGS = -O0
 
 bp_def.h:
