--- a/src/temt/css_bin/Makefile.am
+++ b/src/temt/css_bin/Makefile.am
@@ -9,12 +9,12 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 # emergent
-bin_PROGRAMS = css@PDP_SUFFIX@
+bin_PROGRAMS = css@EMERGENT_SUFFIX@
 
-css@PDP_SUFFIX@_SOURCES = main.cpp
+css@EMERGENT_SUFFIX@_SOURCES = main.cpp
 
-css@PDP_SUFFIX@_LDADD =\
-	@abs_top_builddir@/src/temt/lib/libtemt@PDP_SUFFIX@-@PACKAGE_VERSION@.la
+css@EMERGENT_SUFFIX@_LDADD =\
+	@abs_top_builddir@/src/temt/lib/libtemt@EMERGENT_SUFFIX@-@PACKAGE_VERSION@.la
 
-css@PDP_SUFFIX@_CPPFLAGS = @PDP_INCLUDES@
-css@PDP_SUFFIX@_CXXFLAGS = @OPT_LEVEL@
+css@EMERGENT_SUFFIX@_CPPFLAGS = @EMERGENT_INCLUDES@
+css@EMERGENT_SUFFIX@_CXXFLAGS = @OPT_LEVEL@
