--- a/src/emergent/cs/Makefile.am
+++ b/src/emergent/cs/Makefile.am
@@ -25,25 +25,25 @@ include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
 noinst_LTLIBRARIES =\
-	libcs_EmergentToolkit@PDP_SUFFIX@.la \
-	libcs@PDP_SUFFIX@_@PACKAGE_VERSION@.la
+	libcs_EmergentToolkit@EMERGENT_SUFFIX@.la \
+	libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@.la
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
+libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_SOURCES = $(HEADS) $(SRCS)
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @PDP_INCLUDES@
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
+libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS = @EMERGENT_INCLUDES@
+libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CXXFLAGS = @OPT_LEVEL@
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libcs_EmergentToolkit@PDP_SUFFIX@.la
+libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_LIBADD = libcs_EmergentToolkit@EMERGENT_SUFFIX@.la
 
-libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libcs_EmergentToolkit@PDP_SUFFIX@.la
+libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_DEPENDENCIES = libcs_EmergentToolkit@EMERGENT_SUFFIX@.la
 
-libcs_EmergentToolkit@PDP_SUFFIX@_la_SOURCES =\
+libcs_EmergentToolkit@EMERGENT_SUFFIX@_la_SOURCES =\
 	cs_TA.cpp \
 	cs_TA_type.h \
 	cs_TA_inst.h
 
-libcs_EmergentToolkit@PDP_SUFFIX@_la_CPPFLAGS = $(libcs@PDP_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
+libcs_EmergentToolkit@EMERGENT_SUFFIX@_la_CPPFLAGS = $(libcs@EMERGENT_SUFFIX@_@PACKAGE_VERSION@_la_CPPFLAGS)
 
-libcs_EmergentToolkit@PDP_SUFFIX@_la_CXXFLAGS = -O0
+libcs_EmergentToolkit@EMERGENT_SUFFIX@_la_CXXFLAGS = -O0
 
 cs_def.h:
