More copyright updates

--- a/configure.ac
+++ b/configure.ac
@@ -50,12 +50,12 @@ Carnegie Mellon University, Princeton University.
 
 This file is part of Emergent
 
-  Emergent/The Emergent Toolkit is free software; you can redistribute it and/or modify
+  Emergent is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.
 
-  Emergent/The Emergent Toolkit is distributed in the hope that it will be useful,
+  Emergent is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
