--- a/configure.ac
+++ b/configure.ac
@@ -111,7 +111,7 @@ dnl TODO: modalize the includes based on whether this is toolkit-only mode
 AC_SUBST([EMERGENT_INCLUDES],["-I\$(srcdir)/../../emergent/bp -I\$(srcdir)/../../temt/css -I\$(srcdir)/../../emergent/leabra -I\$(srcdir)/../../emergent/so -I\$(srcdir)/../../emergent/cs -I\$(srcdir)/../../emergent/network -I\$(srcdir)/../../temt/ta -I\$(srcdir)/../../temt/taiqtso -I\$(srcdir)/../../temt/maketa -I\$(abs_top_builddir) -I\$(srcdir) -I\$(srcdir)/src -I\$(srcdir)/../.. -I\$(srcdir)/.."])
 
 AC_CHECK_LIB([ode],[main])
-AC_CHECK_LIB([termcap],[main]) # TODO: This is a temporary hack to get rpms working on Fedora that were built on Kubuntu
+#AC_CHECK_LIB([termcap],[main]) # TODO: This is a temporary hack to get rpms working on Fedora that were built on Kubuntu
 AC_CHECK_LIB([m],[main])
 AC_CHECK_LIB([gslcblas],[main])
 
@@ -363,6 +363,7 @@ AC_CONFIG_FILES([Makefile
 		prog_lib/Makefile
 		test/Makefile
 		plugins/config.pri
+		plugins/Makefile
 		plugins/Makefile.plugin
 		css_lib/Makefile
 		demo/bp/Makefile
@@ -370,6 +371,7 @@ AC_CONFIG_FILES([Makefile
 		demo/leabra/Makefile
 		demo/so/Makefile
 		demo/virt_env/Makefile
+		src/temt/ta/images/Makefile
                 postremove-pak
                 postinstall-pak])
 
