--- a/postremove-pak.in
+++ b/postremove-pak.in
@@ -2,22 +2,22 @@
 
 # Due to a bug in CheckInstall, we have to do this manually.
 if [ -h /usr/local/lib/libemergent-@PACKAGE_VERSION@.so.1 ]; then
-    print Removing symlink /usr/local/lib/libemergent-@PACKAGE_VERSION@.so.1
+    echo Removing symlink /usr/local/lib/libemergent-@PACKAGE_VERSION@.so.1
     rm /usr/local/lib/libemergent-@PACKAGE_VERSION@.so.1
 fi
 if [ -h /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.1 ]; then
-    print Removing symlink /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.1
+    echo Removing symlink /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.1
     rm /usr/local/lib/libtemt-@PACKAGE_VERSION@.so.1
 fi
 if [ -h /usr/local/lib/libSoQt.so.20 ]; then
-    print Removing symlink /usr/local/lib/libSoQt.so.20
+    echo Removing symlink /usr/local/lib/libSoQt.so.20
     rm /usr/local/lib/libSoQt.so.20
 fi
 if [ -h /usr/local/lib/libCoin.so.40 ]; then
-    print Removing symlink /usr/local/lib/libCoin.so.40
+    echo Removing symlink /usr/local/lib/libCoin.so.40
     rm /usr/local/lib/libCoin.so.40
 fi
 if [ -h /usr/local/lib/libsimage.so.20 ]; then
-    print Removing symlink /usr/local/lib/libsimage.so.20
+    echo Removing symlink /usr/local/lib/libsimage.so.20
     rm /usr/local/lib/libsimage.so.20
 fi
