menu icons work on fedora/kubuntu gnome/kde, improved make packages target

--- a/Makefile.am
+++ b/Makefile.am
@@ -151,7 +151,7 @@ force_ta:
 
 do_ta:
 	cd ${abs_top_builddir}/src/temt/ta && ${MAKE} do_ta
-	cd ${abs_top_builddir}/src/emergent/network&& ${MAKE} do_ta
+	cd ${abs_top_builddir}/src/emergent/network && ${MAKE} do_ta
 	cd ${abs_top_builddir}/src/emergent/bp && ${MAKE} do_ta
 	cd ${abs_top_builddir}/src/emergent/leabra && ${MAKE} do_ta
 	cd ${abs_top_builddir}/src/emergent/so && ${MAKE} do_ta
@@ -165,15 +165,17 @@ spec.tmpl.in:
 
 # You net to export/setenv ${DEBEMAIL}
 deb:
-	if test -e trunk.spec; then rm -f trunk.spec;fi
-	checkinstall -D -y --install=no --pkgname=${PACKAGE_NAME} --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir=/usr/local/apt/binary --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-ode,libsimage20c2,libsimage-dev,libsndfile1,libsndfile1-dev,libgsl0,libgsl0-dev
+	if test -e *.spec; then rm -f *.spec;fi
+	if test -e /usr/local/apt/binary/${PACKAGE_NAME}_${PACKAGE_VERSION}-1_i386.deb;then rm /usr/local/apt/binary/${PACKAGE_NAME}_${PACKAGE_VERSION}-1_i386.deb;fi
+	checkinstall --fstrans -D -y --install=no --pkgname=${PACKAGE_NAME} --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir=/usr/local/apt/binary --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-ode,libsimage20c2,libsimage-dev,libsndfile1,libsndfile1-dev,libgsl0,libgsl0-dev
 
 deb-update-repo:
 	cd /usr/local/apt && dpkg-scanpackages binary /dev/null | gzip -9c > binary/Packages.gz
 
 rpm2:
-	if test -e trunk.spec; then rm -f trunk.spec;fi
-	checkinstall -R -y --install=no --pkgname=${PACKAGE_NAME} --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir /usr/local/yum --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-simage,ode,ode-devel,gsl
+	if test -e *.spec; then rm -f *.spec;fi
+	if test -e /usr/local/yum/${PACKAGE_NAME}-${PACKAGE_VERSION}-1.${build_cpu}.rpm;then rm /usr/local/yum/${PACKAGE_NAME}-${PACKAGE_VERSION}-1.${build_cpu}.rpm;fi
+	checkinstall --fstrans -R -y --install=no --pkgname=${PACKAGE_NAME} --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir /usr/local/yum --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-simage,ode,ode-devel,gsl
 
 yum-update-repo:
 	createrepo /usr/local/yum
