ubuntu now uses emergent-simage instead of libsimage20c2 and libsimage-dev. add symlinks for libCoin.so,libSoQt.so,libsimage.so

--- a/Makefile.am
+++ b/Makefile.am
@@ -167,7 +167,7 @@ spec.tmpl.in:
 deb:
 	if test -e *.spec; then rm -f *.spec;fi
 	if test -e /usr/local/apt/binary/emergent_${PACKAGE_VERSION}-1_i386.deb;then rm /usr/local/apt/binary/emergent_${PACKAGE_VERSION}-1_i386.deb;fi
-	checkinstall --fstrans -D -y --install=no --pkgname=emergent --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir=/usr/local/apt/binary --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-ode,libsimage20c2,libsimage-dev,libsndfile1,libsndfile1-dev,libgsl0,libgsl0-dev
+	checkinstall --fstrans -D -y --install=no --pkgname=emergent --pkgversion=${PACKAGE_VERSION} --arch=${build_cpu} --pkglicense=GPL --maintainer=${DEBEMAIL} --reset-uids=yes --pakdir=/usr/local/apt/binary --requires=emergent-qt,emergent-coin,emergent-soqt,emergent-ode,emergent-simage,libsndfile1,libsndfile1-dev,libgsl0,libgsl0-dev
 
 deb-update-repo:
 	cd /usr/local/apt && dpkg-scanpackages binary /dev/null | gzip -9c > binary/Packages.gz
